[package]
name = "little-censor"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
rustrict = { version = "0.7", features = ["customize"] }
regex = "1.9.0"
thiserror = "1.0.50"
once_cell = "1.18.0"

[profile.release]
strip = true
opt-level = 2
